--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
-# Windows:
 Thumbs.db
 ehthumbs.db
 Desktop.ini
-
-# my test param config
 test_param_cfg.py
 .idea/
 .vscode/
-
-# Byte-compiled / optimized / DLL files
 __pycache__/
+.pyc
 *.pyc
 *.py[cod]
 *$py.class
